--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,16 @@ import Card from '../components/Card.astro';
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
+				href="http://localhost:3000/customers"
+				title="Database"
+				body="I have no idea if this actually sends ."
+			/>
+			<Card
+				href="https://www.zoodoobots.com"
+				title="ZooDooBots"
+				body="Check out Mark Dinn's stuff"
+			/>
+			<Card
 				href="https://docs.astro.build/"
 				title="Documentation"
 				body="Learn how Astro works and explore the official API docs."
