--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,9 +65,19 @@ import Card from '../components/Card.astro';
 				body="Explore a galaxy of community-built starter themes."
 			/>
 			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				href="/login"
+				title="Login"
+				body="Create an account or log into an existing one."
+			/>
+			<Card
+				href="https://basic.concealedvacations.com"
+				title="Marketing Site"
+				body="Check out our more comprehensive astro site."
+			/>
+			<Card
+				href="https://github.com/offline171"
+				title="Github"
+				body="Learn more about the main developer of this site."
 			/>
 		</ul>
 	</main>
