Change some info

--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 ---
 
-<Layout title="Welcome to Dev Concealed Vacations.">
+<Layout title="Login to Concealed Vacations">
 	<main>
 		<svg
 			class="astro-a"
@@ -33,10 +33,7 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>Welcome to <span class="text-gradient">Dev Concealed Vacations</span></h1>
-		<p class="instructions">
-			To get started, enter your login information below.
-		</p>
+		<h1>To get started, enter your login information below.</h1>
 		<form method = "POST"> 
 			<label>
 				Username:
