Prepping original website to be swapped

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,8 +35,11 @@ import Card from '../components/Card.astro';
 		</svg>
 		<h1>Welcome to <span class="text-gradient">Dev Concealed Vacations</span></h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			Due to structural changes in how this website will be developed, 
+			this page will be scraped and replaced with another repo. 
+			We know no one actually looked at this anyways, so we don't know who this is for, 
+			but we put this here anyways if for no other reason than a reminder.
+			Thank you for your patience.
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
